2011-11-09  Murray Cumming  <murrayc@murrayc.com>

	PostgreSQL backend: Use g_shell_quote().

	* glom/libglom/connectionpool_backends/postgres.[h|cc]:
	get_path_to_postgres_executable(): Return the already-quoted path
	to avoid the need for manual quoting by the caller.
	However, make this optional (but the default) so that the check in 
	* main.cc: can still work.
	* glom/libglom/connectionpool_backends/postgres_self.cc: Use 
	Glib::shell_quote() instead of manually adding quote characters.
	Hopefully this also escapes special characters, though we should try to 
	test this somehow.

2011-11-08  Murray Cumming  <murrayc@murrayc.com>

	Avoid some repetition of some CREATE GROUP and ALTER GROUP queries.

	* glom/libglom/db_utils.[h|cc]: Added build_query_create_group() and 
	build_query_add_user_to_group() to avoid repeating the code.
	* glom/base_db.cc:
	* glom/mode_design/users/dialog_groups_list.cc:
	* glom/mode_design/users/dialog_users_list.cc: Use them.

1.19.19:

2011-11-08  Murray Cumming  <murrayc@murrayc.com>

	Use escape_sql_id() for privileges SQL queries.

	* glom/base_db.cc:
	* glom/libglom/db_utils.cc:
	* glom/libglom/privs.cc:
	* glom/mode_design/users/dialog_groups_list.cc:
	* glom/mode_design/users/dialog_users_list.cc: Use 
	DbUtils::escape_sql_id() instead of manually adding quotes with 
	no escaping. This seems to be the right thing to do for these 
	queries.

2011-11-08  Murray Cumming  <murrayc@murrayc.com>

	More use of escape_sql_id().

	* glom/base_db.cc:
	* glom/libglom/db_utils.cc:
	* glom/libglom/privs.cc:
	* glom/mode_design/users/dialog_groups_list.cc:
	* glom/mode_design/users/dialog_users_list.cc: Use 
	escape_sql_id() instead of manually adding quotes with no 
	escaping. However, I have not yet done this for group and 
	user names.

2011-11-08  Murray Cumming  <murrayc@murrayc.com>

	libglom: Remove LayoutItem_Field::get_sql_name().

	* glom/libglom/utils.cc: build_sql_select_add_fields_to_get():